Refactor VFS: Javaio*->Jdk*, IFileSystem->IVfsDriver/Device, Fake*->Pseudo*.